<resources>
    <string name="app_name">CPC hors-ligne</string>
    <string name="title_activity_welcome">CanardPC hors-ligne</string>
    <string name="title">CanardPC hors-ligne</string>
    <string name="folder_name">CPC-hors-ligne</string>

    <string name="images_off">Ne pas inclure les images</string>
    <string name="images_on">Inclure les images</string>
    <string name="button_dl">Télécharger le numéro</string>

    <string name="dl_with_images">Télécharger avec les images</string>
    <string name="dl_no_images">Télécharger sans les images</string>

    <string name="downloading_number">Téléchargement du numéro %1$d&#8230;</string>
    <string name="downloaded_number">numéro %1$d téléchargé</string>
    <string name="dl_already_pending">un téléchargement est déjà en cours!</string>


    <string name="password_hint">mot de passe</string>
    <string name="magnumber_hint">numéro du magazine (ex: 375)</string>
    <string name="login_hint">pseudo CanardPC</string>
    <string name="login_connect">Se connecter</string>
    <string name="login_connect_waiting">Connexion…</string>
    <string name="login_incorrect_credentials">pseudo ou mot de passe incorrect</string>

    <string name="account_type">CanardPC</string>
    <string name="save_credentials">enregistrer les identifiants</string>
    <string name="logout">Déconnexion</string>
    <string name="logout_confirm">voulez vous supprimer vos identifiants CanardPC?</string>

    <string name="yes">oui</string>
    <string name="no">non</string>

    <string name="error">erreur</string>
    <string name="ok">ok</string>

    <string name="notif_title">Téléchargement de CanardPC n°</string>
    <string name="notif_downloading">Téléchargement en cours</string>
    <string name="notif_image_download">Téléchargement des images</string>
    <string name="notif_writing">Enregistrement du numéro</string>
    <string name="notif_ended">téléchargement terminé</string>
    <string name="read">lire</string>

    <string name="notif_new_mag">Un nouveau canardPC est disponible!</string>
    <string name="notif_new_article">Un nouvel article de canardPC est disponible!</string>
    <string name="notif_click_to_download">Appuyez pour le télécharger</string>

    <string name="invalid_permissions">veuillez accepter ces permissions pour permettre le téléchargement</string>

    <string name="stop_dl">annuler</string>
    <string name="stop_dl_question">Voulez vous annuler le téléchargement?</string>
    <string name="stop_dl_done">Téléchargement annulé</string>

    <string name="open">ouvrir</string>

    <string name="notice">Le téléchargement du magazine se fera dans votre dossier de téléchargements.
        \nLe Fichier téléchargé aura pour nom cpcXXX.html où XXX est le numéro du magazine. Il sera écrasé si nécessaire.
        \nSi vous choisissez de ne pas inclure les images, le nom du fichier sera dy type cpcXXX-nopic.html
        (pour information, le total des images représente généralement entre 50Mo et 250Mo, le reste du magazine 1Mo).</string>

    <string name="error_opening_file">erreur à l\'ouverture du magasine</string>

    <string name="no_network">Problème de réseau</string>
    <string name="no_wifi_home">Erreur de réseau.\n
        Veuillez vérifier vos paramètres internet</string>
    <string name="network_settings">Paramètres réseau</string>



</resources>
