<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LayoutLoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginBottom="30dp"
    android:layout_marginTop="30dp"
    android:clipToPadding="false"
    android:orientation="vertical">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_hint" />


    <fr.tikione.c2e.NoChangingBackgroundTextInputLayout
        android:id="@+id/LoginIDLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/LoginIDInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_border_textview"
            android:hint="@string/login_hint"
            android:maxLines="1">
        </android.support.design.widget.TextInputEditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_hint" />

    </fr.tikione.c2e.NoChangingBackgroundTextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/LoginPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 1 line under: android:drawableStart="@android:drawable/ic_lock_idle_lock" -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/LoginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rectangle_border_textview"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/LoginConnectButton"
        style="@style/AppTheme.coloredButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="onLoginClick"
        android:text="@string/login_connect"
        android:visibility="visible" />


</LinearLayout>
