<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/fragment"
        android:name="fr.tikione.c2e.MagListRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@color/CPCMainColorDark"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/progressDownloadingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="32"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="32"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/progressInfoTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="100"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/background_material_lighter"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Téléchargement du numéro 380..." />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="100"
                    android:max="100"
                    android:min="0"
                    android:paddingBottom="3dp"
                    android:progress="0"
                    android:progressTint="@android:color/background_light"
                    android:scaleY="1.8"
                    tools:progress="42" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonCancelDownload"
                style="@style/AppTheme.coloredButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="100"
                android:background="@android:color/transparent"
                android:onClick="stopService"
                android:text="@string/stop_dl" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressFinishedLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/dlFinishedTextview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="45"
                android:gravity="center_vertical"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/background_material_lighter"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="numéro 380 téléchargé" />

            <Button
                android:id="@+id/buttonOpenMag"
                style="@style/AppTheme.coloredButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:background="@android:color/transparent"
                android:onClick="openMag"
                android:text="@string/open"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/notice"
            android:visibility="gone" />

        <Button
            style="@style/AppTheme.coloredButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="logout"
            android:text="@string/logout"
            android:visibility="gone" />

    </LinearLayout>

</FrameLayout>

